CHANGES IN FLTK 1.1.2

	- Added a "draw_children()" method to Fl_Group to make
	  subclassing Fl_Group with a custom draw() function
	  easier.
	- Fl_Text_Editor now supports basic undo functionality.
	- FLUID now uses Fl_Text_Editor widgets for all
	  multi-line code fields.
	- Added new widget bin and icons to FLUID.
	- FLUID would try running multiple commands in parallel,
	  even though it wasn't capable of handling it.
	- FLUID didn't generate code for some attributes when
	  using custom/named widget classes.
	- Added a new FL_COMMAND state bit which maps to FL_CTRL
	  on X11 and WIN32 and FL_META on MacOS.
	- MacOS keyboard modifiers mapping corrections. Cmd and
	  Control are no longer swapped, event_key and event_text
	  return (mostly) the same values as on other platforms.
	- The Fl_Tabs widget should no longer be a focus hog;
	  previously it would take focus from child widgets.
	- The file chooser now activates the OK button when
	  opening a directory in directory selection mode.
	- Fixed a bug in the file chooser when entering an
	  absolute path.
	- Back-ported some FLTK 2.0 tooltip changes to eliminate
	  erroneous tooltip display.
	- MacOS windows were resizable, even when size_range
	  would not allow for resizing.
	- Fl_Text_Editor now supports Shift+Delete, Ctrl+Insert,
	  and Shift+Insert for cut, copy, and paste,
	  respectively.
	- Fl_Text_Display didn't restore the mouse pointer when
	  hidden.
	- Fl::arg() now ignores the MacOS X -psn_N_NNNNN option.
	- Added another change to the WIN32 redraw handling for
	  the MingW compilers.
	- Fl_File_Chooser didn't handle WIN32 home directories
	  that used backslashes instead of forward slashes.
	- Fl_Text_Display didn't limit the resize height to 1
	  line.
	- Fl_Scrollbar widgets incorrectly took keyboard focus
	  when clicked on. This caused widgets such as
	  Fl_Text_Display to hide the cursor when you scrolled
	  the text.


CHANGES IN FLTK 1.1.1
