@@ -1,5 +1,5 @@
 //
-// "$Id: Fl.cxx,v 1.24.2.41.2.57 2002/10/30 01:26:03 easysw Exp $"
+// "$Id: Fl.cxx,v 1.24.2.41.2.58 2002/11/08 15:45:31 easysw Exp $"
 //
 // Main event handling code for the Fast Light Tool Kit (FLTK).
 //
@@ -871,7 +871,7 @@ void Fl_Widget::redraw_label() {
       // background...
       int X = x() > 0 ? x() - 1 : 0;
       int Y = y() > 0 ? y() - 1 : 0;
-      damage(FL_DAMAGE_ALL, X, Y, w() + 2, h() + 2);
+      window()->damage(FL_DAMAGE_ALL, X, Y, w() + 2, h() + 2);
     }
 
     if (align() && !(align() & FL_ALIGN_INSIDE) && window()->shown()) {
@@ -879,17 +879,19 @@ void Fl_Widget::redraw_label() {
       // the label and redraw the window within that bounding box...
       int W = 0, H = 0;
       label_.measure(W, H);
+      W += 5; // Add a little to the size of the label to cover overflow
+      H += 5;
 
       if (align() & FL_ALIGN_BOTTOM) {
-	damage(FL_DAMAGE_EXPOSE, x(), y() + h(), w(), H);
+	window()->damage(FL_DAMAGE_EXPOSE, x(), y() + h(), w(), H);
       } else if (align() & FL_ALIGN_TOP) {
-	damage(FL_DAMAGE_EXPOSE, x(), y() - H, w(), H);
+	window()->damage(FL_DAMAGE_EXPOSE, x(), y() - H, w(), H);
       } else if (align() & FL_ALIGN_LEFT) {
-	damage(FL_DAMAGE_EXPOSE, x() - W, y(), W, h());
+	window()->damage(FL_DAMAGE_EXPOSE, x() - W, y(), W, h());
       } else if (align() & FL_ALIGN_RIGHT) {
-	damage(FL_DAMAGE_EXPOSE, x() + w(), y(), W, h());
+	window()->damage(FL_DAMAGE_EXPOSE, x() + w(), y(), W, h());
       } else {
-        damage(FL_DAMAGE_ALL);
+        window()->damage(FL_DAMAGE_ALL);
       }
     } else {
       // The label is inside the widget, so just redraw the widget itself...
@@ -973,5 +975,5 @@ void Fl_Window::flush() {
 }
 
 //
-// End of "$Id: Fl.cxx,v 1.24.2.41.2.57 2002/10/30 01:26:03 easysw Exp $".
+// End of "$Id: Fl.cxx,v 1.24.2.41.2.58 2002/11/08 15:45:31 easysw Exp $".
 //
